[workspace]
resolver = "2"

members = ["beacon-api-client", "ethereum-consensus", "spec-gen", "spec-tests"]

[workspace.dependencies]
tokio = { version = "=1.41.1", features = ["full", "fs"] }
tokio-stream = "0.1.15"
tracing = "0.1"
reqwest = { version = "=0.12.12", default-features = false, features = ["json"] }
url = "2.2.2"
http = "=1.3.1"
mev-share-sse = { git = "https://github.com/cristibctr/mev-share-rs", branch = "main", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8"
itertools = "0.10.3"
thiserror = "1.0.30"
hex = "0.4.3"
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "84ef2b71aa004f6767420badb42c902ad56b8b72" }
blst = "0.3.11"
rand = "0.8.4"
sha2 = "0.10.8"
integer-sqrt = "0.1.5"
enr = "0.6.2"
multihash = { version = "0.16", default-features = false, features = [
    "std",
    "multihash-impl",
    "identity",
    "sha2",
] }
multiaddr = "0.14.0"
c-kzg = "1.0.0"
bs58 = "0.4.0"
eyre = "0.6.8"
bip39 = "2.0.0"
rand_core = { version = "0.6", features = ["std"] }
rayon = "1.8.0"
hkdf = "0.12.3"
ruint = "1.11.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
scrypt = "0.11.0"
aes = "0.8.3"
ctr = "0.9.2"
base64 = "0.21.4"
unicode-normalization = "0.1.22"
bitvec = "1.0.1"
syn = { version = "1.0.98", features = [
    "full",
    "visit",
    "visit-mut",
    "extra-traits",
] }
prettyplease = "0.1.10"
quote = "1.0.18"
clap = { version = "4.5.3", features = ["derive"] }
convert_case = "0.6.0"
walkdir = "2.3.3"
interprocess = { version = "=2.2.2", default-features = false }

[patch.crates-io]
reqwest = { git = "https://github.com/cristibctr/reqwest", branch = "master" }
socket2 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.5.8" }
socket3 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.6.0", package = "socket2" }
c-kzg = { git = "https://github.com/cristibctr/c-kzg-4844", branch = "v1.0.3"}
tokio = { git = "https://github.com/cristibctr/tokio-wasix", branch = "wasix-1.41.1" }
hyper-util = { git = "https://github.com/cristibctr/hyper-util", branch = "master" }
interprocess = { git = "https://github.com/cristibctr/interprocess", branch = "main" }
libc = { git = "https://github.com/cristibctr/libc-0.2.169", branch = "wasix-0.2.169" }
alloy-consensus = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-eips = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-genesis = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-json-rpc = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-network = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-network-primitives = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-node-bindings = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-provider = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-pubsub = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-client = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-admin = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-anvil = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-beacon = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-debug = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-engine = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-eth = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-mev = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-trace = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-rpc-types-txpool = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-serde = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-signer = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-signer-local = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport-http = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport-ipc = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
alloy-transport-ws = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
futures-utils-wasm = { git = "https://github.com/cristibctr/futures-utils-wasm", branch = "main" }